Made changes for deploying on Heroku

--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "set NODE_ENV=dev && node app.js"
-  },
+    "start": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+    },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -16,6 +16,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
     "lodash": "^4.17.21",
-    "mongoose": "^5.11.17"
+    "mongoose": "^5.11.17",
+    "nodemon": "^2.0.4"
   }
 }
