--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "@apollo/client": "^3.3.11",
+    "dotenv": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,7 +39,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "proxy":"http://localhost:4000/"
+    ]
   }
 }
